# python-ddd

./: README.md  pyproject.toml
booking_service/application/booking/: booking_dto.py  booking_manager.py
booking_service/application/customers/: customer_dto.py  customer_manager.py  customer_storage.py
booking_service/domain/booking/: entities.py  enums.py  exceptions.py
booking_service/domain/customers/: entities.py  exceptions.py
booking_service/helpers/: http_helper.py
booking_service/tests/: tests_booking_aggregate.py  tests_booking_manager.py
booking_service/tests/customers/: test_customers_aggregate.py  test_customers_manager.py
infrastructure/django/api/booking/: models.py  repositories.py  urls.py  views.py
infrastructure/django/api/booking/migrations/: 0001_initial.py
infrastructure/django/api/customers/: models.py  repositories.py  serializers.py  urls.py  views.py
infrastructure/django/api/customers/migrations/: 0001_initial.py
infrastructure/django/api/main/: settings.py  urls.py
