[tool.poetry]
name = "python-ddd"
version = "0.1.0"
description = ""
authors = ["Uemerson Pinheiro Junior <uemersonpinheirojunior@gmail.com>"]
readme = "README.md"
packages = [{include = "python_ddd"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"
Django = "^4.1.4"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.7"
mypy = "^0.991"
black = {version = "^22.10.0", allow-prereleases = true}
flake8 = "^6.0.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
